hphp/test/zend/good/ext/intl/tests/collator_sort.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if( !extension_loaded( 'intl' ) ) print 'skip';
if (version_compare(INTL_ICU_VERSION, '51.2') >=  0) die('skip for ICU < 51.2');
}
