hphp/test/zend/bad/ext/soap/tests/bugs/bug31422.php.skipif
<?php
if (substr(PHP_OS, 0, 3) == 'WIN') {
    die('skip not valid for windows');
}
require_once('skipif.inc');
?>